# spirit-gpu

./: .gitignore  API.md  API.zh.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
.github/workflows/: publish_to_pypi.yaml
spirit_gpu/: __init__.py  concurrency.py  env.py  handler.py  heartbeat.py  log.py  manager.py  proxy.py  settings.py  task.py  worker.py
spirit_gpu/builder/: generator.py  parse.py
spirit_gpu/builder/resources/worker-template/: Dockerfile
spirit_gpu/builder/resources/worker-template/scripts/: start.sh
spirit_gpu/cmd/: __init__.py  builder.py
spirit_gpu/resources/worker-template/: LICENSE  README.md  requirements.txt
spirit_gpu/resources/worker-template/scripts/: build.sh
spirit_gpu/resources/worker-template/src/: build.py  main.py
spirit_gpu/utils/: __init__.py  file.py  validate.py
sprite_gpu/: __init__.py  concurrency.py  conf.py  env.py  log.py  manager.py  server.py  task.py  worker.py
sprite_gpu/utils/: __init__.py
test/: download_data.py  handler.py  main.py  run.sh  server.py
